cmake_minimum_required(VERSION 2.8)
project( mnist )
#find_package( OpenCV REQUIRED )
SET(GCC_COVERAGE_COMPILE_FLAGS "-fpermissive")
#SET(GCC_COVERAGE_COMPILE_FLAGS "-fprofile-arcs -ftest-coverage")
#SET(GCC_COVERAGE_LINK_FLAGS    "-lgcov")
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
include_directories( ${OpenCV_INCLUDE_DIRS} /home/ubuntu/bey/beyond/eigenlib /home/ubuntu/bey/beyond/builder /home/ubuntu/eigen/eigen-eigen-07105f7124f9)
LINK_DIRECTORIES(/home/ubuntu/bey/beyond/builder /home/ubuntu/bey/beyond/eigenlib)
set(LIBS ${LIBS} -leigen)
set(LIBS ${LIBS} -lbuilder)
add_executable( rowcsv mnistrow.cpp )
target_link_libraries( rowcsv ${OpenCV_LIBS} ${LIBS} )
