cmake_minimum_required(VERSION 2.8)
project( mnist )
#find_package( OpenCV REQUIRED )
SET(GCC_COVERAGE_COMPILE_FLAGS "-fpermissive")
#SET(GCC_COVERAGE_COMPILE_FLAGS "-fprofile-arcs -ftest-coverage")
#SET(GCC_COVERAGE_LINK_FLAGS    "-lgcov")
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
include_directories( ${OpenCV_INCLUDE_DIRS} /home/numerical/dl/beyondcpp/eigenlib /home/numerical/dl/beyondcpp/builder ../../eigen-eigen-da9b4e14c255)
LINK_DIRECTORIES(/home/numerical/dl/beyondcpp/builder /home/numerical/dl/beyondcpp/eigenlib)
set(LIBS ${LIBS} -leigen)
set(LIBS ${LIBS} -lworkflow)
add_executable( rowcsv mnistrow.cpp builder.cpp)
target_link_libraries( rowcsv ${OpenCV_LIBS} ${LIBS} )
